# LearnOpenGL

./: CMakeLists.txt  CMakePresets.json  main.cpp  shader.h
glad/include/glad/: glad.h
glad/src/: glad.c
shaders/: shader.fs  shader.vs
